--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView
+  <FrameLayout
+    android:id="@+id/camera_preview"
     android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_weight="1"
+    />
+
+  <Button
+    android:id="@+id/button_capture"
+    android:text="Capture"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World, MainActivity"
+    android:layout_gravity="center"
     />
 </LinearLayout>
